# yew_router

./: Cargo.toml  README.md
crates/yew_router_macro/: Cargo.toml
crates/yew_router_macro/src/: lib.rs  switch.rs
crates/yew_router_macro/src/switch/: enum_impl.rs  shadow.rs  struct_impl.rs
crates/yew_router_route_parser/: Cargo.toml
src/: lib.rs  route.rs
tests/macro_test/src/: lib.rs
