[package]
name = "yew-router-min"
version = "0.8.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>", "Sascha Grunert <mail@saschagrunert.de>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "yew", "router"]
categories = ["gui", "web-programming"]
description = "A router implementation for the Yew framework"
repository = "https://github.com/crackcomm/yew_router"


[dependencies]
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"

nom = "5.0.1"

yew-router-route-parser = { path = "crates/yew_router_route_parser", version = "0.8.0", package = "yew-router-min-route-parser" }
yew-router-macro = { path = "crates/yew_router_macro", version = "0.8.0", package = "yew-router-min-macro" }

[workspace]
members = [
    "crates/yew_router_route_parser",
    "crates/yew_router_macro",
]
